# local-llm-lab

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/skills/changelog/: SKILL.md
.agents/skills/create-issue/: SKILL.md
.agents/skills/create-readme/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: model-onboarding.md
.github/workflows/: validate.yml
datasets/: README.md
datasets/golden/: .gitignore
docs/: conventions.md
docs/adr/: 0000-template.md  0001-deferred-two-tier.md  0002-openai-compat-interface.md  0003-omni-from-start.md  0004-precommit-over-ci.md  0005-adopt-aidlc.md  0006-ai-review-layered-concept.md  0007-visualization-gui-tech-selection.md  0008-model-candidate-snapshot-2026-07-02.md
docs/coding-standards/: javascript-typescript.md  python.md  review-checklist.md  web-gui.md
docs/model-onboarding/: devstral-small-2.md  gemma4-12b.md  lfm2.5-1.2b-jp-202606.md  llm-jp-4-8b-instruct.md  qwen2.5-vl-7b.md  qwen3-8b.md  qwen3-coder-30b-a3b.md
docs/research/: 2026-07-02-cicd-automation-security-review.md  2026-07-02-model-candidate-survey.md  2026-07-02-webapp-gui-visualization-study.md  2026-07-03-github-repository-settings-current.md  2026-07-03-whichllm-coding-candidates.md  local-llm-multimodal-study.md
docs/runbooks/: dgx-spark.md  mac-m4pro.md  wsl2-rtx.md
docs/specs/: 01_要件定義書.md
docs/templates/: 01_要件定義書.md  02_基本設計書.md  03_詳細設計書.md  04_API設計書.md  05_テスト仕様書.md  06_機能要件定義書.md  ヒアリングシート.md
envs/mac/: README.md  check.sh  serve-ollama.sh  serve-vllm-metal.sh  setup-llamacpp-metal.sh  setup-mlx-vlm.sh  setup-vllm-metal.sh  smoke-ollama.sh
harness/: README.md  __init__.py  run_onboarding.py
harness/capability/: README.md  __init__.py  adapters.py  run.py
harness/common/: __init__.py  measure.py  multimodal.py  openai_client.py  registry.py  results.py  types.py
harness/fit/: README.md  __init__.py  openai.py
harness/reporting/: __init__.py  results_summary.py
harness/speed/: README.md  __init__.py  openai.py
harness/task/: __init__.py
harness/task/vlm/: markers.py  (+3 more)
registry/: hardware.yaml  models.yaml
registry/schema/: hardware.schema.json  models.schema.json
results/: results.csv
results/reports/: 2026-07-02-capability-adapters.md  2026-07-02-llm-jp-4-8b-instruct-onboarding.md  2026-07-02-phase0-mac-vlm-fit-speed.md  2026-07-02-vlm-image-task-set.md  2026-07-02-vlm-screenshot-custom-eval-set.md  2026-07-03-coding-agent-public-v1.md  2026-07-03-devstral-small-2-onboarding-final.md  2026-07-03-gemma4-12b-onboarding.md  2026-07-03-lfm2.5-1.2b-jp-202606-onboarding.md  2026-07-03-llm-jp-4-8b-instruct-llm-jp-eval-jcommonsenseqa.md  2026-07-03-llm-jp-4-8b-instruct-summary-tags-public-v1.md  2026-07-03-mac-runtime-expansion.md  2026-07-03-qwen2.5-vl-7b-onboarding.md  2026-07-03-qwen3-8b-onboarding-final.md  2026-07-03-qwen3-coder-30b-a3b-coding-agent-public-v1.md  2026-07-03-qwen3-coder-30b-a3b-onboarding-final.md  2026-07-03-results-summary.md
scripts/: check_env.sh  guard_branch_name.py  guard_golden.sh  guard_results_append_only.sh  sync_agent_skills.py  whichllm_scan.sh
tests/: test_capability_adapters.py  test_common_results.py  test_measure.py  test_multimodal.py  test_reporting_results_summary.py  test_run_onboarding.py  test_task_helpers.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  styles.css
(+60 files in other folders)
